--- a/desafio-01/.prettierrc
+++ b/desafio-01/.prettierrc
@@ -1,10 +1,13 @@
 {
-  "printWidth": 80,
-  "tabWidth": 4,
-  "useTabs": false,
-  "singleQuote": true,
-  "semi": false,
-  "trailingComma": "es5",
+  "arrowParens": "always",
+  "bracketSpacing": false,
+  "endOfLine": "lf",
+  "jsxBracketSameLine": false,
   "jsxSingleQuote": true,
-  "arrowParens": "always"
+  "printWidth": 80,
+  "semi": false,
+  "useTabs": false,
+  "trailingComma": "es5",
+   "singleQuote": true,
+   "tabWidth": 4
 }
