--- a/desafio-01/package.json
+++ b/desafio-01/package.json
@@ -8,6 +8,7 @@
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.0",
     "react-bootstrap-table-next": "^4.0.3",
+    "react-bootstrap-typeahead": "^5.1.4",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
@@ -20,9 +21,7 @@
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
-    "extends": [
-      "react-app"
-    ]
+    "extends": "react-app"
   },
   "browserslist": {
     "production": [
@@ -35,11 +34,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "eslint": "^7.21.0",
-    "eslint-config-prettier": "^8.1.0",
-    "eslint-plugin-prettier": "^3.3.1",
-    "prettier": "^2.2.1"
   }
 }
