--- a/.gitignore
+++ b/.gitignore
@@ -1,26 +1,26 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
-/node_modules
-.pnp
-.pnp.js
+/desafio-01/node_modules
+/desafio-01/.pnp
+/desafio-01/.pnp.js
 
 # vscode
-.vscode
+/desafio-01/.vscode
 
 # testing
-/coverage
+/desafio-01//coverage
 
 # production
-build
+/desafio-01/build
 
 # misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
+/desafio-01/.DS_Store
+/desafio-01/.env.local
+/desafio-01/.env.development.local
+/desafio-01/.env.test.local
+/desafio-01/.env.production.local
 
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+/desafio-01/npm-debug.log*
+/desafio-01/yarn-debug.log*
+/desafio-01/yarn-error.log*
